--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+<head>
 <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="Juntos hacemos tu marca en internet más relevante diseñando a medida. Y cuidamos de tu reputación online en Google.">
@@ -19,6 +20,14 @@
 <link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
+<!-- preload -->
+<!-- <div class="preload">
+    <div class="preload__img">
+        <img class="imgLogo" src="./images/preload/253morado3.png" alt="">
+        <div class="ball"></div>
+    </div>
+</div> preload out-->
+
 <header>
 
 <!-- Nuevo Menu-->
@@ -55,6 +64,9 @@
           <li class="nav-item">
             <a class="nav-link lista21" href="./pages/blogwide.html">Blog</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link lista21" href="./pages/login.html">login</a>
+          </li>
         </ul>
       </div>
     </div>
@@ -66,13 +78,13 @@
     <h2 id="primero" class="texto1">Hola</h2>
     <p id="segundo" class="texto2">Somos creativos, Diseñamos tu web y lo hacemos por ti</p>
 <!--Boton-->
-    <a href="" id="btn-hero" class="btn-hero">Solicitar Presupuesto <i class="fas fa-angle-double-right"></i></a>
+    <a href="./pages/contacto.html" id="btn-hero" class="btn-hero">Solicitar Presupuesto <i class="fas fa-angle-double-right"></i></a>
 </main>
 
 <footer class="text-white container-fluid pt-4">
 <div class="container-fluid d-flex justify-content-center py-0">
   <nav class="row">
-    <p class="d-flex justify-content-center">®Copyright Studio-CodigoWP 2021</p>
+    <p class="d-flex justify-content-center">®Copyright Studio-CodigoWP 2022</p>
   <ul class="social-container-logo d-flex justify-content-center">
       <li><a class="lista2" href="https://facebook.com/studiocodigowp"><i class="fab fa-facebook"></i></a></li>
       <li><a class="lista2" href="https://instagram.com/studiocodigowp"><i class="fab fa-instagram"></i></a></li>
@@ -86,6 +98,6 @@
 </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
-<script src="./js/main.js"></script>
+<script src="inicio.js"></script>
 </body>
 </html>
