--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -25,8 +25,6 @@
 
 </head>
 <body>
-
-
 <!-- Nuevo Menu-->
 <nav class="navbar navbar-expand-sm navbar-light container-fluid">
     <div class="container-fluid">
@@ -61,6 +59,9 @@
           <li class="nav-item">
             <a class="nav-link lista21" href="./blogwide.html">Blog</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link lista21" href="./login.html">login</a>
+          </li>
         </ul>
       </div>
     </div>
@@ -74,29 +75,29 @@
            <div class="contact-form">
      <h3>Contactanos</h3>
 
-      <form action="" method="POST" enctype="text/plain">
+      <form id="formulario" action="" method="POST" enctype="text/plain">
         <p>
          <label for="name">Nombre y Apellido </label>
-         <input type="text" name="Nombre" placeholder="Nombre y Apellido"/>
+         <input type="text" id="nombre" name="Nombre" placeholder="Nombre y Apellido"/>
         </p>
         <p>
          <label for="mail">Email</label>
-         <input type="email" name="mail" placeholder="nombre@ejemplo.com"/>
+         <input type="email" id="email" name="mail" placeholder="nombre@ejemplo.com"/>
         </p>
         <p>
             <label for="tel">Telefono</label>
-            <input type="phone" name="tel" placeholder="Telefono"/>
+            <input type="phone" id="tel" name="tel" placeholder="Telefono"/>
         </p>
         <p>
             <label for="name">Asunto </label>
-            <input type="text" name="asunto" placeholder="Asunto"/>
+            <input type="text" id="asunto" name="asunto" placeholder="Asunto"/>
         </p>
         <p class="block">
          <label for="description">¿Que necesitas?</label>
-         <textarea name="" id="" cols="3" rows="3"></textarea>
+         <textarea name="" id="desc" cols="3" rows="3"></textarea>
         </p>
         <p class="block">
-         <button>
+         <button type="submit" class="claction" id="fsubmit" >
              Enviar
          </button>
         </p>
@@ -119,7 +120,7 @@
 <footer class="text-white container-fluid pt-4">
   <div class="container-fluid d-flex justify-content-center py-0">
     <nav class="row">
-      <p class="d-flex justify-content-center">®Copyright Studio-CodigoWP 2021</p>
+      <p class="d-flex justify-content-center">®Copyright Studio-CodigoWP 2022</p>
     <ul class="social-container-logo d-flex justify-content-center">
         <li><a class="lista2" href="https://facebook.com/studiocodigowp"><i class="fab fa-facebook"></i></a></li>
         <li><a class="lista2" href="https://instagram.com/studiocodigowp"><i class="fab fa-instagram"></i></a></li>
@@ -134,5 +135,6 @@
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
+<script src="../js/form.js"></script>
 </body>
 </html>
