--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -57,6 +57,9 @@
           <li class="nav-item">
             <a class="nav-link lista21" href="./blogwide.html">Blog</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link lista21" href="./login.html">login</a>
+          </li>
         </ul>
       </div>
     </div>
@@ -106,7 +109,7 @@
 <footer class="text-white container-fluid pt-4">
   <div class="container-fluid d-flex justify-content-center py-0">
     <nav class="row">
-      <p class="d-flex justify-content-center">®Copyright Studio-CodigoWP 2021</p>
+      <p class="d-flex justify-content-center">®Copyright Studio-CodigoWP 2022</p>
     <ul class="social-container-logo d-flex justify-content-center">
         <li><a class="lista2" href="https://facebook.com/studiocodigowp"><i class="fab fa-facebook"></i></a></li>
         <li><a class="lista2" href="https://instagram.com/studiocodigowp"><i class="fab fa-instagram"></i></a></li>
@@ -119,5 +122,6 @@
   </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
+<script src="../js/main.js"></script>
 </body>
 </html>
